# finance_manager

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  config.py  context.py  create_ppt.py  init.sql  mm  pyproject.toml  requirements.txt
backend/dao/: __init__.py  account_dao.py  budget_dao.py  category_dao.py  log_dao.py  transaction_dao.py  user_dao.py
backend/db/: __init__.py  connection.py
backend/docs/: api_doc.md  database_doc.md
backend/dto/: __init__.py  account.py  budget.py  category.py  transaction.py  user.py
backend/route/: __init__.py  account_routes.py  budget_routes.py  category_routes.py  depends.py  di_providers.py  log_routes.py  result.py  statistics_routes.py  transaction_routes.py  user_routes.py
backend/service/: __init__.py  account_service.py  budget_service.py  category_service.py  log_service.py  statistics_service.py  transaction_service.py  user_service.py
backend/tests/: __init__.py  test_account.py  test_all.py  test_budget.py  test_category.py  test_integration.py  test_log.py  test_transaction.py
backend/vo/: __init__.py  result.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: account.js  budget.js  category.js  index.js  log.js  request.js  statistics.js  transaction.js  user.js
frontend/src/composables/: useStore.js
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/views/: Accounts.vue  Budget.vue  Categories.vue  (+6 more)
