[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbutils==3.1.2",
    "pymysql==1.1.0",
    "pydantic-settings>=2.7.0",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-jose[cryptography]>=3.3.0",

]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
